--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <main></main>
     <footer></footer>
-    <script src="./js/variables.js"></script>
+    <script src="./js/objetos.js"></script>
+    <script src="./js/logica.js"></script>    
 </body>
 </html>
