--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,20 +10,18 @@
     <link rel="stylesheet" href="./estilos/sass.css">
     <title>Document</title>
 </head>
-
 <body>
     <header>
         <h1>Sitio web de previsión del tiempo</h1>
-        <div id="buscador" >
+        <div id="buscador" class="buscaBoton">
             <label for="filtrado"> Buscar ubicación 
             <input type="text" name="filtrado" id="filtrado" class="botonFiltro">
             <input type="submit" value="filtrar" id="botonBuscar">
             </label>
         </div>
-        <div id="notificaciones">
+        <div id="notificaciones" class="notiBoton">
             <input type="submit" id="botoNotificacion" value="Notificaciones" class="botonDeNotificacion" >
         </div>
-
     </header>
     <main>
         <section>           
@@ -42,5 +39,4 @@
     <script src="./js/objetos.js"></script>
     <script src="./js/main.js"></script>
 </body>
-
 </html>
