--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Sitio web de previsión del tiempo</h1>
+        <h1>Previsión del tiempo</h1>
         <div id="buscador" class="buscaBoton">
             <label for="filtrado"> Buscar ubicación 
             <input type="text" name="filtrado" id="filtrado" class="botonFiltro">
