--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <h1>Previsión del tiempo</h1>
         <div id="buscador" class="buscaBoton">
             <label for="filtrado"> Buscar ubicación 
-                <input type="text" name="filtrado" id="filtrado" class="botonFiltro">
+                <input type="text" name="provincia" id="filtradoProv" class="botonFiltro">
+                <input type="submit" name="Buscar" value="Buscar" id="botonBuscar">
                 <input type="submit" value="Añadir" id="botonAgregar">
             </label>
         </div>
