--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
                 <input type="submit" value="Añadir" id="botonAgregar">
             </label>
         </div>
+        <select name="paises" id="paises">
+            <option disabled selected value="">Elija su país de interés</option>
+            <option value="AR">Argentina</option>
+            <option value="CO">Colombia</option>
+            <option value="CR">Costa Rica</option>
+            <option value="ES">España</option>
+            <option value="US">Estados Unidos</option>
+            <option value="MX">México</option>
+            <option value="PE">Perú</option>
+        </select>
         <div id="notificaciones" class="notiBoton">
             <input type="submit" id="botoNotificacion" value="Notificaciones guardadas" class="botonDeNotificacion" >
         </div>
