--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header class="estilosHeader">
         <h1>Previsión del tiempo</h1>
-        <div id="buscador" class="buscaBoton" class="estilosBotones">
-            <label for="filtrado" class="estilosBotones"> Buscar ubicación 
+        <div id="buscador" class="buscaBoton">
+            <label for="filtrado" class="buscaBotonLabel"> Ubicación 
                 <input type="text" name="provincia" id="filtradoProv" class="estilosBar">
                 <input type="submit" name="Buscar" value="Buscar" id="botonBuscar" class="estilosBotones">                
             </label>
